# fastapi-postgres-pgadmin

./: docker-compose.yml
server/: Dockerfile  alembic.ini  main.py  pyproject.toml
server/alembic/: env.py  scripts.txt
server/alembic/versions/: 3c7b619c8eda_.py  717618702adf_.py  a455523043c4_.py
server/config/: db_setup.py
server/models/: author.py  book.py
server/routes/: authors.py  books.py
server/schemas/: author.py  book.py
